Fix layout CSS on mobile

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -29,3 +29,7 @@
 .related li a.inline {
   display: inline;
 }
+
+.grid-row main#content {
+  margin: 0;
+}
